# Voxels

./: .gitignore  CMakeLists.txt  Makefile  OpenGL Project 1.sln  README.md
OpenGL Project 1/: OpenGL Project 1.cpp  OpenGL Project 1.vcxproj  OpenGL Project 1.vcxproj.filters
OpenGL Project 1/Shaders/: shader.frag  shader.vert
Shaders/: shader.frag  shader.vert
assets/textures/: block.json
include/: camera.h
include/OpenGL-Voxel-Test/: camera.h  glad.h  shader.h
include/glad/: glad.h
src/: block.cpp  block.hpp  chunk.cpp  chunk.hpp  glad.c  main.cpp  world.cpp  world.hpp
